--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                 <!--google play icon-->
                 <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-1">
+
+            </div>
+            <div class="col-lg-5">
                 <img class="Title-image" src="images/iphone6.png" alt="iphone-mockup">
             </div>
         </div>
