--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
     <div class="container-fluid">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
@@ -29,33 +29,31 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml=auto">
+                <ul class="navbar-nav ml-auto">
                     <il class="nav-item">
-                        <a class="nav-link" href="">Contact</a>
+                      <!-- contacting the navbar to the section through their id  -->
+                        <a class="nav-link" href="#footer">Contact</a>
                     </il>
                     <il class="nav-item">
-                        <a class="nav-link" href="">Pricing</a>
+                        <a class="nav-link" href="#pricing">Pricing</a>
                     </il>
                     <il class="nav-item">
-                        <a class="nav-link" href="">Download</a>
+                        <a class="nav-link" href="#cta">Download</a>
                     </il>
                 </ul>
             </div>
         </nav>
         <!-- Title -->
         <!--making the picture and the text take 50% on a large screen and a 100% on any diffrent screen size-->
-        <div class="row">
-            <div class="col-lg-6">
-                <h1>Meet new and interesting dogs nearby</h1>
+        <div class="row ">
+            <div class=" col-lg-6">
+                <h1 class="big-heading">Meet new and interesting dogs nearby</h1>
                 <!--apple icon-->
                 <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
                 <!--google play icon-->
                 <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
             </div>
-            <div class="col-lg-1">
-
-            </div>
-            <div class="col-lg-5">
+            <div class="col-lg-6">
                 <img class="Title-image" src="images/iphone6.png" alt="iphone-mockup">
             </div>
         </div>
@@ -65,43 +63,48 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
+    <div class="container-fluid">
     <div class="row">
       <!-- fa-5x is 5 times the original size of the icon -->
       <div class="col-lg-4 Feature-box">
         <i class="fas fa-check-circle Feature-icon fa-5x"></i>
-        <h3>Easy to use.</h3>
+        <h3 class="features-Title">Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
       </div>
       <div class="col-lg-4 Feature-box">
         <i class="fas fa-bullseye Feature-icon fa-5x"></i>
-        <h3>Elite Clientele</h3>
+        <h3 class="features-Title">Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
       </div>
       <div class="col-lg-4 Feature-box">
         <i class="fas fa-heart Feature-icon fa-5x"></i>
-        <h3>Guaranteed to work.</h3>
+        <h3 class="features-Title">Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
       </div>
     </div>
+  </div>
+
   </section>
 
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
     <div id="testimonials-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+            <div class="carousel-item active container-fluid">
+                <h2 class="testimonials-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
                 <img class="testimonials-image" src="images/dog-img.jpg" alt="dog-profile">
                 <em>Pebbles, New York</em>
             </div>
-            <div class="carousel-item">
-                <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+
+            <div class="carousel-item container-fluid">
+                <h2 class="testimonials-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
                 <img class="testimonials-image" src="images/lady-img.jpg" alt="lady-profile">
                 <em>Beverly, Illinois</em>
             </div>
+
             <button class="carousel-control-prev" type="button" data-bs-target="#testimonials-carousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -116,7 +119,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -127,56 +130,88 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section"id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
+    <!--enabling for a resonsive componnent-->
+    <div class="row">
+      <!-- on large screen it will take a third of the screen and on meduim a half-->
+      <div class="pricing-col col-lg-4 col-md-6">
 
+      <div class="card">
+        <div class="card-header">
+          <h3>Chihuahua</h3>
+        </div>
+        <div class="card-body">
+          <h2 class="price-text">Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg btn-block btn-outline-dark"type="button">Sign Up</button>
+        </div>
+      </div>
+    </div>
+    <!-- on large screen it will take a third of the screen and on meduim a half-->
+        <div class="pricing-col col-lg-4 col-md-6">
+      <div class="card">
+        <div class="card-header">
+          <h3>Labrador</h3>
+        </div>
+        <div class="card-body">
+          <h2 class="price-text">$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+        </div>
+      </div>
+      </div>
+      <!-- on large screen it will take a third of the screen and on any diff size it
+      will take all of the screen-->
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+        <div class="pricing-col col-lg-4">
+      <div class="card">
+        <div class="card-header">
+          <h3>Mastiff</h3>
+        </div>
+        <div class="card-body">
+          <h2 class="price-text">$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+        </div>
+      </div>
+        </div>
+    </div>
   </section>
 
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
+    <div class="container-fluid">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button class="btn btn-dark btn-lg download-button" type="button"><i class="fab fa-apple"></i> Download</button>
+    <button class="btn btn-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
+    </div>
 
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-
+  <footer class="white-section" id="footer">
+    <div class="container-fluid">
+    <i class="social-icon fab fa-facebook"></i>
+    <i class="social-icon fab fa-twitter"></i>
+    <i class="social-icon fab fa-instagram"></i>
+    <i class="social-icon fas fa-envelope"></i>
     <p>© Copyright 2018 TinDog</p>
-
+    </div>
   </footer>
 
 
